compiler/testData/diagnostics/tests/redeclarations/shadowedExtension/localExtensionShadowedByMember.kt
interface IFoo {
    fun foo()
}

fun outer() {
    fun IFoo.<!EXTENSION_SHADOWED_BY_MEMBER!>foo<!>() {}
}